Add oidc server
